# InfoFunnel

./: .gitignore  README.md  agent-workflow.md  allowed-senders.md  cleanup-candidates.md  daily-briefing-draft.md  email-calendar-alert-rules.md  email-calendar-taxonomy.md  email-sender-classification-ledger.csv  email-sender-classification-ledger.md  feedback-protocol.md  hermes-goal.md  important-categories.md  important-email-review.md  important-senders.md  project-status.md  pyproject.toml  requirements.txt  sender-legitimacy-checks.md  sender-service-registry.csv  sender-service-registry.schema.json  subscription-savings-watchlist.md  triage-evaluation-cases.jsonl  unwanted-senders.md  whatsapp-alert-format.md
.hermes/plans/: 2026-05-16_231638-ai-email-calendar-alert-agent-team.md
config/: news-monitor.schema.json  news-monitor.yaml
docs/: adding-topics.md  architecture.md
scripts/: briefing_renderer.py  news-monitor-admin.py  setup_feeds.py  triage_dry_run.py
src/productivity_agent/: __init__.py
src/productivity_agent/admin/: __init__.py  cli.py
src/productivity_agent/config/: __init__.py  defaults.py
src/productivity_agent/delivery/: __init__.py
src/productivity_agent/digest/: __init__.py
src/productivity_agent/filtering/: __init__.py
tests/: conftest.py  test_briefing_renderer.py  test_triage_dry_run.py
tests/test_config/: test_config.py
tests/test_digest/: test_generator.py
tests/test_filtering/: test_engine.py
web/: README.md  __init__.py  app.py  run.py
web/templates/: dashboard.html  topic.html
(+3 files in other folders)
