[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-productivity-agent"
version = "0.1.0"
description = "Intelligent background news and information monitoring system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "click>=8.1",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
productivity-agent = "productivity_agent.admin:main"

[tool.setuptools.packages.find]
where = ["src"]
